--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <-- Начало: Данный блок удалять нельзя -->
-        <-- Конец -->
+    <!-- Начало: Данный блок удалять нельзя -->
+        <!-- Конец -->
             <!--https://www.figma.com/file/CKHLwkDywQhqNRIjaBs4xi/coffee-landing?node-id=0%3A1&t=yz4WLrMLI5A4u39L-0-->
             <header class="header">
                 <div class="container">
